--- a/inventory-spring-service/rest/src/main/resources/templates/login.html
+++ b/inventory-spring-service/rest/src/main/resources/templates/login.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
-<title >Login Page</title>
-<script th:inline="javascript">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"/>
+    <title>Login Page</title>
+    <script th:inline="javascript">
 	function validate() {
         if (document.f.username.value == "" && document.f.password.value == "") {
             alert(/*[[#{message.username} + #{message.password}]]*/);
@@ -22,37 +22,41 @@
         }
     }
     
-</script>
-<style type="text/css">
+
+    </script>
+    <style type="text/css">
 .wrapper{width:500px;margin-left:auto;margin-right:auto}
 label{padding-left:0 !important}
-</style>
+
+    </style>
 </head>
 <body>
-<div th:if="${param.message != null}" class="alert alert-info" >message</div>
-<div th:if="${param.error != null}" class="alert alert-danger" >Error: Either username or password is wrong! Please try again...</div>
+<div class="alert alert-info" th:if="${param.message != null}">message</div>
+<div class="alert alert-danger" th:if="${param.error != null}">Error: Either username or password is wrong! Please try
+    again...
+</div>
 
-    <div class="container">
-        <div class="row wrapper">
-            <h1 >Login Page</h1>
+<div class="container">
+    <div class="row wrapper">
+        <h1>Login Page</h1>
 
-            <form name='f' th:action="@{/login}" method='POST' onsubmit="return validate();">
+        <form method='POST' name='f' onsubmit="return validate();" th:action="@{/login}">
 
-                  <br /><br />
-                 <label class="col-sm-4" >User Name</label>
-                 <span class="col-sm-8"><input class="form-control" type='text' name='username' value=''/></span>
-                
-                <br/><br/>        
-                 <label class="col-sm-4" >Password</label>
-                 <span class="col-sm-8"><input class="form-control" type='password' name='password' /></span>
+            <br/><br/>
+            <label class="col-sm-4">User Name</label>
+            <span class="col-sm-8"><input class="form-control" name='username' type='text' value=''/></span>
 
-                
-                <br/><br/>
-                 <input class="btn btn-primary" name="submit" type="submit" value="Submit" />
- 
-            </form>
-        </div>
+            <br/><br/>
+            <label class="col-sm-4">Password</label>
+            <span class="col-sm-8"><input class="form-control" name='password' type='password'/></span>
+
+
+            <br/><br/>
+            <input class="btn btn-primary" name="submit" type="submit" value="Submit"/>
+
+        </form>
     </div>
+</div>
 </body>
 
 </html>
