--- a/inventory-spring-service/rest/src/main/resources/templates/logout.html
+++ b/inventory-spring-service/rest/src/main/resources/templates/logout.html
@@ -1,19 +1,19 @@
 <html>
 
 <head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
-<meta http-equiv="Content-Type" content="text/html; charset=US-ASCII"/>
-<title >Logout Page</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"/>
+    <meta content="text/html; charset=US-ASCII" http-equiv="Content-Type"/>
+    <title>Logout Page</title>
 </head>
 
 <body>
-    <div class="container">
-        <h1 id="error" class="alert alert-danger" th:if="${session[SPRING_SECURITY_LAST_EXCEPTION]}" >error</h1>
-                
-        <h1 id="success" class="alert alert-info" th:if="${param.logSucc}" >logout success</h1>
-        <br/><br/><br/>
-        <a class="btn btn-primary" th:href="@{/login}" >login</a>
-    </div>
+<div class="container">
+    <h1 class="alert alert-danger" id="error" th:if="${session[SPRING_SECURITY_LAST_EXCEPTION]}">error</h1>
+
+    <h1 class="alert alert-info" id="success" th:if="${param.logSucc}">logout success</h1>
+    <br/><br/><br/>
+    <a class="btn btn-primary" th:href="@{/login}">login</a>
+</div>
 </body>
 
 </html>
