hosting js file separately

--- a/inventory-spring-service/rest/src/main/resources/templates/homepage.html
+++ b/inventory-spring-service/rest/src/main/resources/templates/homepage.html
@@ -9,7 +9,7 @@
     <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <title>Inventory Database</title>
-    <script defer="defer" src="/scripts/my_app_ui.js"></script>
+    <script defer="defer" src="http://localhost:8090/my_app_ui.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
